--- a/5_get_activities_prompt.sty
+++ b/5_get_activities_prompt.sty
@@ -1,4 +1,4 @@
-Genera una estructura completa para una clase sobre el tema {class_name}. El nivel educativo del público objetivo es {target_audience_edu_level} y el grado es {grade}.
+Genera una estructura completa para una clase sobre el tema {class_name} a partir de {result_1_2}. El nivel educativo del público objetivo es {target_audience_edu_level} y el grado es {grade}.
 La respuesta que me des debe estar basada en la siguiente informacion {context}
 
 La estructura debe incluir unicamente los siguientes elementos y en subtitulo de nivel 2:
@@ -11,3 +11,5 @@ Actividades reflexivas: Actividades que fomenten la reflexión crítica sobre lo
 Devuelve la respuesta en formato markdown sin agregar texto adicional, simplemente retorna el texto con el formato.
 No agregues la palabra markdown en la respuesta y no agregues triple comilla.
 Para construir las actividades usa las siguientes sugerencias del como se tiene que realizar basandote en los derechos basicos del aprendizaje: {dba}.
+
+No debes incluir el texto de {result_1_2}.
