--- a/2_get_base_prompt.sty
+++ b/2_get_base_prompt.sty
@@ -6,7 +6,7 @@ La estructura debe incluir unicamente los siguientes elementos:
 Título: Título claro y atractivo para la clase.
 Fecha de creación: {date}
 Nivel educativo: Nivel educativo del público objetivo.
-Resultados de aprendizaje: Enumera los resultados de aprendizaje que se espera que los estudiantes logren al final de la clase, utilizando verbos claros y medibles. para el resultado de aprendizaje basate unicamente en esta infomación sobre Estándares Básicos de Competencias y Orientaciones pedagógicas ({learning_result}).
+Resultados de aprendizaje (como subtitulo ## Resultados de aprendizaje:): Enumera los resultados de aprendizaje que se espera que los estudiantes logren al final de la clase, utilizando verbos claros y medibles. para el resultado de aprendizaje basate unicamente en esta infomación sobre Estándares Básicos de Competencias y Orientaciones pedagógicas ({learning_result}).
 
 Devuelve la respuesta en formato markdown sin agregar texto adicional, simplemente retorna el texto con el formato.
 No agregues la palabra markdown en la respuesta.
