--- a/3_get_preschool_able_prompt.sty
+++ b/3_get_preschool_able_prompt.sty
@@ -1,4 +1,4 @@
-Ajusta los temas presentados en la siguiente clase para que sean adecuados para un niño de 4 años, asegurándote de que el contenido sea comprensible, lúdico y relevante para este nivel educativo.
+Ajusta los temas presentados en la siguiente clase para que sean adecuados para un niño de 4 años, asegurándote de que el contenido sea comprensible, lúdico y relevante para este nivel educativo pero sin cambiar ni agregar ningun título ni subtítulo.
 
 "
 {result}
@@ -9,5 +9,5 @@ Ajusta los temas presentados en la siguiente clase para que sean adecuados para 
 2. En caso de que sean actividades modificalas para que sean lúdicas, prácticas y fáciles de realizar por un niño de esta edad, como juegos, dibujos, canciones o actividades manuales.
 3. En caso de ser preguntas de examen ajusta para que sean visuales, concretas y estén relacionadas con el contexto cotidiano de un niño pequeño.
 
-Devuelve el contenido ajustado en el mismo formato que estaba, tanto de esctructura como markdown. No agregues la palabra "markdown" en la respuesta.
+Devuelve el contenido ajustado en el mismo formato que estaba, tanto de estructura como markdown. No agregues la palabra "markdown" en la respuesta.
 No agregues ninguna explicación ni comentario inicial ni adicional.
