--- a/S3_metadata_asigna_edad.ipynb
+++ b/S3_metadata_asigna_edad.ipynb
@@ -856,7 +856,6 @@
     "                except Exception as e:\n",
     "                    print(f\"Error procesando {obj['Key']}: {e}\")\n",
     "\n",
-    "# Imprimir resumen\n",
     "print(\"\\nResumen de asignaciones:\")\n",
     "for result in results:\n",
     "    print(f\"{result['Archivo JSON']} → page_url: {result['page_url']}, age_from: {result['age_from']}, age_to: {result['age_to']}\")"
@@ -2708,7 +2707,7 @@
     "\n",
     "        return all_objects\n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️ Error al listar objetos en {bucket_name}/{prefix}: {e}\")\n",
+    "        print(f\"  Error al listar objetos en {bucket_name}/{prefix}: {e}\")\n",
     "        return []\n",
     "\n",
     "# Función para contar objetos dentro de las carpetas de primer orden\n",
@@ -3010,15 +3009,8 @@
     }
    ],
    "source": [
-    "import boto3\n",
-    "import json\n",
-    "\n",
-    "# Configuración del bucket y prefijo\n",
     "bucket_name = \"men-prod-raw-data\"\n",
     "prefix = \"ENGLISH_FOR_COLOMBIA_ECOWEB/\"\n",
-    "\n",
-    "# Crear cliente de S3\n",
-    "s3_client = boto3.client('s3')\n",
     "\n",
     "# Función mejorada para obtener TODOS los archivos .metadata.json, incluyendo los de subcarpetas\n",
     "def list_metadata_files(bucket, prefix):\n",
@@ -3033,19 +3025,19 @@
     "                metadata_files.extend([obj['Key'] for obj in page['Contents'] if obj['Key'].endswith('.metadata.json')])\n",
     "\n",
     "        if not metadata_files:\n",
-    "            print(f\"⚠️ No se encontraron archivos en {bucket}/{prefix}\")\n",
+    "            print(f\"  No se encontraron archivos en {bucket}/{prefix}\")\n",
     "\n",
     "        return metadata_files\n",
     "\n",
     "    except s3_client.exceptions.NoSuchBucket:\n",
-    "        print(f\"❌ El bucket {bucket} no existe.\")\n",
+    "        print(f\"  El bucket {bucket} no existe.\")\n",
     "        return []\n",
     "    except s3_client.exceptions.ClientError as e:\n",
     "        error_code = e.response['Error']['Code']\n",
     "        if error_code == \"AccessDenied\":\n",
-    "            print(f\"🚫 Acceso denegado a {bucket}. Verifica permisos.\")\n",
+    "            print(f\"  Acceso denegado a {bucket}. Verifica permisos.\")\n",
     "        else:\n",
-    "            print(f\"⚠️ Error desconocido con {bucket}: {e}\")\n",
+    "            print(f\"  Error desconocido con {bucket}: {e}\")\n",
     "        return []\n",
     "\n",
     "# Función para verificar si un JSON tiene el campo \"nivel_educativo\"\n",
@@ -3059,7 +3051,7 @@
     "        return \"metadataAttributes\" in json_content and \"nivel_educativo\" in json_content[\"metadataAttributes\"]\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️ Error al leer {file_key}: {e}\")\n",
+    "        print(f\"  Error al leer {file_key}: {e}\")\n",
     "        return False\n",
     "\n",
     "# Obtener nombres de archivos .metadata.json en TODAS las subcarpetas\n",
@@ -3073,10 +3065,10 @@
     "    # Calcular porcentaje\n",
     "    percentage = (files_with_nivel_educativo / total_files) * 100 if total_files > 0 else 0\n",
     "\n",
-    "    print(f\"📊 Total de archivos .metadata.json en todas las subcarpetas: {total_files}\")\n",
-    "    print(f\"✅ Archivos con 'nivel_educativo': {files_with_nivel_educativo} ({percentage:.2f}%)\")\n",
+    "    print(f\"   Total de archivos .metadata.json en todas las subcarpetas: {total_files}\")\n",
+    "    print(f\"   Archivos con 'nivel_educativo': {files_with_nivel_educativo} ({percentage:.2f}%)\")\n",
     "else:\n",
-    "    print(f\"⚠️ No se encontraron archivos .metadata.json en {bucket_name}/{prefix}.\")\n"
+    "    print(f\"  No se encontraron archivos .metadata.json en {bucket_name}/{prefix}.\")\n"
    ]
   },
   {
@@ -3095,16 +3087,6 @@
     }
    ],
    "source": [
-    "import boto3\n",
-    "import json\n",
-    "\n",
-    "# Configuración del bucket y prefijo\n",
-    "bucket_name = \"men-prod-raw-data\"\n",
-    "prefix = \"ENGLISH_FOR_COLOMBIA_ECOWEB/\"\n",
-    "\n",
-    "# Crear cliente de S3\n",
-    "s3_client = boto3.client('s3')\n",
-    "\n",
     "# Función mejorada para obtener TODOS los archivos .metadata.json, incluyendo los de subcarpetas\n",
     "def list_metadata_files(bucket, prefix):\n",
     "    try:\n",
@@ -3118,19 +3100,19 @@
     "                metadata_files.extend([obj['Key'] for obj in page['Contents'] if obj['Key'].endswith('.metadata.json')])\n",
     "\n",
     "        if not metadata_files:\n",
-    "            print(f\"⚠️ No se encontraron archivos en {bucket}/{prefix}\")\n",
+    "            print(f\"  No se encontraron archivos en {bucket}/{prefix}\")\n",
     "\n",
     "        return metadata_files\n",
     "\n",
     "    except s3_client.exceptions.NoSuchBucket:\n",
-    "        print(f\"❌ El bucket {bucket} no existe.\")\n",
+    "        print(f\"  El bucket {bucket} no existe.\")\n",
     "        return []\n",
     "    except s3_client.exceptions.ClientError as e:\n",
     "        error_code = e.response['Error']['Code']\n",
     "        if error_code == \"AccessDenied\":\n",
-    "            print(f\"🚫 Acceso denegado a {bucket}. Verifica permisos.\")\n",
+    "            print(f\"  Acceso denegado a {bucket}. Verifica permisos.\")\n",
     "        else:\n",
-    "            print(f\"⚠️ Error desconocido con {bucket}: {e}\")\n",
+    "            print(f\"  Error desconocido con {bucket}: {e}\")\n",
     "        return []\n",
     "\n",
     "# Función para extraer los valores únicos de \"nivel_educativo\"\n",
@@ -3145,7 +3127,7 @@
     "            return json_content[\"metadataAttributes\"][\"nivel_educativo\"]\n",
     "    \n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️ Error al leer {file_key}: {e}\")\n",
+    "        print(f\"  Error al leer {file_key}: {e}\")\n",
     "    \n",
     "    return None  # Si hay algún error, devolver None\n",
     "\n",
@@ -3162,11 +3144,11 @@
     "            nivel_educativo_values.add(value)\n",
     "\n",
     "    # Imprimir los valores únicos encontrados\n",
-    "    print(\"\\n📊 Valores únicos en 'nivel_educativo':\")\n",
+    "    print(\"\\   Valores únicos en 'nivel_educativo':\")\n",
     "    for value in sorted(nivel_educativo_values):\n",
     "        print(f\"   - {value}\")\n",
     "else:\n",
-    "    print(f\"⚠️ No se encontraron archivos .metadata.json en {bucket_name}/{prefix}.\")\n"
+    "    print(f\"  No se encontraron archivos .metadata.json en {bucket_name}/{prefix}.\")\n"
    ]
   },
   {
@@ -3186,16 +3168,6 @@
     }
    ],
    "source": [
-    "import boto3\n",
-    "\n",
-    "# Configuración de los buckets y prefijos\n",
-    "buckets_and_prefixes = {\n",
-    "    \"men-prod-raw-data\": \"ENGLISH_FOR_COLOMBIA_ECOWEB/\",\n",
-    "    \"men-prod-clean-data\": \"contenidos_formativos/ENGLISH_FOR_COLOMBIA_ECOWEB/\"\n",
-    "}\n",
-    "\n",
-    "# Crear cliente de S3\n",
-    "s3_client = boto3.client('s3')\n",
     "\n",
     "# Función mejorada para obtener TODOS los archivos .metadata.json, incluyendo los de subcarpetas\n",
     "def list_metadata_files(bucket, prefix):\n",
@@ -3211,19 +3183,19 @@
     "                metadata_files.update(files)\n",
     "\n",
     "        if not metadata_files:\n",
-    "            print(f\"⚠️ No se encontraron archivos en {bucket}/{prefix}\")\n",
+    "            print(f\"  No se encontraron archivos en {bucket}/{prefix}\")\n",
     "\n",
     "        return metadata_files\n",
     "\n",
     "    except s3_client.exceptions.NoSuchBucket:\n",
-    "        print(f\"❌ El bucket {bucket} no existe.\")\n",
+    "        print(f\"  El bucket {bucket} no existe.\")\n",
     "        return set()\n",
     "    except s3_client.exceptions.ClientError as e:\n",
     "        error_code = e.response['Error']['Code']\n",
     "        if error_code == \"AccessDenied\":\n",
-    "            print(f\"🚫 Acceso denegado a {bucket}. Verifica permisos.\")\n",
+    "            print(f\"  Acceso denegado a {bucket}. Verifica permisos.\")\n",
     "        else:\n",
-    "            print(f\"⚠️ Error desconocido con {bucket}: {e}\")\n",
+    "            print(f\"  Error desconocido con {bucket}: {e}\")\n",
     "        return set()\n",
     "\n",
     "# Obtener los nombres de archivos en ambos buckets (ahora incluyendo subcarpetas)\n",
@@ -3234,9 +3206,9 @@
     "common_files = metadata_raw.intersection(metadata_clean)\n",
     "\n",
     "# Imprimir resultados\n",
-    "print(f\"\\n📊 Total de archivos .metadata.json en men-prod-raw-data (todas las subcarpetas): {len(metadata_raw)}\")\n",
-    "print(f\"📊 Total de archivos .metadata.json en men-prod-clean-data (todas las subcarpetas): {len(metadata_clean)}\")\n",
-    "print(f\"✅ Archivos presentes en ambos buckets: {len(common_files)}\")\n"
+    "print(f\"   Total de archivos .metadata.json en men-prod-raw-data (todas las subcarpetas): {len(metadata_raw)}\")\n",
+    "print(f\" Total de archivos .metadata.json en men-prod-clean-data (todas las subcarpetas): {len(metadata_clean)}\")\n",
+    "print(f\"  Archivos presentes en ambos buckets: {len(common_files)}\")\n"
    ]
   },
   {
@@ -3255,16 +3227,6 @@
     }
    ],
    "source": [
-    "import boto3\n",
-    "import json\n",
-    "\n",
-    "# Configuración del bucket y prefijo\n",
-    "bucket_name = \"men-prod-clean-data\"\n",
-    "prefix = \"contenidos_formativos/ENGLISH_FOR_COLOMBIA_ECOWEB/\"\n",
-    "\n",
-    "# Crear cliente de S3\n",
-    "s3_client = boto3.client('s3')\n",
-    "\n",
     "# Función mejorada para obtener TODOS los archivos .metadata.json, incluyendo los de subcarpetas\n",
     "def list_metadata_files(bucket, prefix):\n",
     "    try:\n",
@@ -3278,19 +3240,19 @@
     "                metadata_files.extend([obj['Key'] for obj in page['Contents'] if obj['Key'].endswith('.metadata.json')])\n",
     "\n",
     "        if not metadata_files:\n",
-    "            print(f\"⚠️ No se encontraron archivos en {bucket}/{prefix}\")\n",
+    "            print(f\"  No se encontraron archivos en {bucket}/{prefix}\")\n",
     "\n",
     "        return metadata_files\n",
     "\n",
     "    except s3_client.exceptions.NoSuchBucket:\n",
-    "        print(f\"❌ El bucket {bucket} no existe.\")\n",
+    "        print(f\"  El bucket {bucket} no existe.\")\n",
     "        return []\n",
     "    except s3_client.exceptions.ClientError as e:\n",
     "        error_code = e.response['Error']['Code']\n",
     "        if error_code == \"AccessDenied\":\n",
-    "            print(f\"🚫 Acceso denegado a {bucket}. Verifica permisos.\")\n",
+    "            print(f\"  Acceso denegado a {bucket}. Verifica permisos.\")\n",
     "        else:\n",
-    "            print(f\"⚠️ Error desconocido con {bucket}: {e}\")\n",
+    "            print(f\"  Error desconocido con {bucket}: {e}\")\n",
     "        return []\n",
     "\n",
     "# Función para verificar si un JSON tiene los campos \"age_from\" y \"age_to\"\n",
@@ -3304,7 +3266,7 @@
     "        return \"metadataAttributes\" in json_content and \"age_from\" in json_content[\"metadataAttributes\"] and \"age_to\" in json_content[\"metadataAttributes\"]\n",
     "    \n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️ Error al leer {file_key}: {e}\")\n",
+    "        print(f\"  Error al leer {file_key}: {e}\")\n",
     "        return False\n",
     "\n",
     "# Obtener nombres de archivos .metadata.json en TODAS las subcarpetas\n",
@@ -3318,17 +3280,17 @@
     "    # Calcular porcentaje\n",
     "    percentage = (files_with_age_fields / total_files) * 100 if total_files > 0 else 0\n",
     "\n",
-    "    print(f\"\\n📊 Total de archivos .metadata.json en {bucket_name} (todas las subcarpetas): {total_files}\")\n",
-    "    print(f\"✅ Archivos con 'age_from' y 'age_to': {files_with_age_fields} ({percentage:.2f}%)\")\n",
+    "    print(f\"\\   Total de archivos .metadata.json en {bucket_name} (todas las subcarpetas): {total_files}\")\n",
+    "    print(f\"  Archivos con 'age_from' y 'age_to': {files_with_age_fields} ({percentage:.2f}%)\")\n",
     "\n",
     "    # Si hay archivos sin estos campos, muestra ejemplos\n",
     "    if files_with_age_fields < total_files:\n",
     "        missing_files = [file for file in metadata_files if not check_age_fields(bucket_name, file)]\n",
-    "        print(\"\\n⚠️ Ejemplo de archivos que NO tienen 'age_from' o 'age_to':\")\n",
+    "        print(\"\\n  Ejemplo de archivos que NO tienen 'age_from' o 'age_to':\")\n",
     "        for file in missing_files[:10]:  # Muestra hasta 10 ejemplos\n",
     "            print(f\"   - {file}\")\n",
     "else:\n",
-    "    print(f\"⚠️ No se encontraron archivos .metadata.json en {bucket_name}/{prefix}.\")\n"
+    "    print(f\"  No se encontraron archivos .metadata.json en {bucket_name}/{prefix}.\")\n"
    ]
   },
   {
@@ -4333,18 +4295,6 @@
     }
    ],
    "source": [
-    "import boto3\n",
-    "import json\n",
-    "\n",
-    "# Configuración de los buckets y prefijos\n",
-    "buckets_and_prefixes = {\n",
-    "    \"men-prod-raw-data\": \"ENGLISH_FOR_COLOMBIA_ECOWEB/\",\n",
-    "    \"men-prod-clean-data\": \"contenidos_formativos/ENGLISH_FOR_COLOMBIA_ECOWEB/\"\n",
-    "}\n",
-    "\n",
-    "# Crear cliente de S3\n",
-    "s3_client = boto3.client('s3')\n",
-    "\n",
     "# Función mejorada para obtener TODOS los archivos, incluyendo los de subcarpetas\n",
     "def list_metadata_files(bucket, prefix):\n",
     "    try:\n",
@@ -4359,19 +4309,19 @@
     "                metadata_files.update(files)\n",
     "        \n",
     "        if not metadata_files:\n",
-    "            print(f\"⚠️ No se encontraron archivos en {bucket}/{prefix}\")\n",
+    "            print(f\"  No se encontraron archivos en {bucket}/{prefix}\")\n",
     "\n",
     "        return metadata_files\n",
     "    \n",
     "    except s3_client.exceptions.NoSuchBucket:\n",
-    "        print(f\"❌ El bucket {bucket} no existe.\")\n",
+    "        print(f\"  El bucket {bucket} no existe.\")\n",
     "        return set()\n",
     "    except s3_client.exceptions.ClientError as e:\n",
     "        error_code = e.response['Error']['Code']\n",
     "        if error_code == \"AccessDenied\":\n",
-    "            print(f\"🚫 Acceso denegado a {bucket}. Verifica permisos.\")\n",
+    "            print(f\"  Acceso denegado a {bucket}. Verifica permisos.\")\n",
     "        else:\n",
-    "            print(f\"⚠️ Error desconocido con {bucket}: {e}\")\n",
+    "            print(f\"  Error desconocido con {bucket}: {e}\")\n",
     "        return set()\n",
     "\n",
     "# Función para verificar si un JSON en men-prod-raw-data tiene \"nivel_educativo\" como \"Educación básica y secundaria\"\n",
@@ -4385,7 +4335,7 @@
     "        return \"metadataAttributes\" in json_content and json_content[\"metadataAttributes\"].get(\"nivel_educativo\") == \"Educación básica y secundaria\"\n",
     "    \n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️ Error al leer {file_key}: {e}\")\n",
+    "        print(f\"  Error al leer {file_key}: {e}\")\n",
     "        return False\n",
     "\n",
     "# Función para actualizar age_from y age_to en los archivos de men-prod-clean-data\n",
@@ -4408,10 +4358,10 @@
     "        updated_content = json.dumps(json_content, indent=4, ensure_ascii=False)\n",
     "        s3_client.put_object(Bucket=bucket, Key=file_key, Body=updated_content, ContentType=\"application/json\")\n",
     "\n",
-    "        print(f\"✅ Archivo actualizado: {file_key} -> age_from: {age_from}, age_to: {age_to}\")\n",
+    "        print(f\"  Archivo actualizado: {file_key} -> age_from: {age_from}, age_to: {age_to}\")\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️ Error al actualizar {file_key}: {e}\")\n",
+    "        print(f\"  Error al actualizar {file_key}: {e}\")\n",
     "\n",
     "# Obtener la lista de archivos en ambos buckets (ahora incluyendo subcarpetas)\n",
     "metadata_raw = list_metadata_files(\"men-prod-raw-data\", buckets_and_prefixes[\"men-prod-raw-data\"])\n",
